//package cetty.craft;

option java_package = "io.cetty.craft";
option java_outer_classname = "CraftOptionsProto";

import "google/protobuf/descriptor.proto";

message CraftFieldOptions {
	//请求时参数映射
    optional string   path_param = 1;
	optional string  query_param = 2;
	optional string header_param = 3;
	optional string matrix_param = 4;
	optional string cookie_param = 5;
	optional string   form_param = 6;
	
	optional bool mapping_content = 10;
	
	optional string     consumer = 20;
	optional string     producer = 21;
	optional bool      invisible = 22;
	
	//xml序列化参数
	optional bool xml_attribute = 40;
	optional bool   xml_element = 41;
	
	//安全，参数校验
	optional bool    ignore_sign = 50;
	optional int32   decimal_min = 51;
	optional int32   decimal_max = 52;
	optional string      pattern = 53;
	
	optional string    raw_field = 60;
}

message CraftEnumOptions {
    optional string   path_param = 1;
	optional string  query_param = 2;
	optional string header_param = 3;
	optional string matrix_param = 4;
	optional string cookie_param = 5;
	optional string   form_param = 6;
}

message CraftMessageOptions {
    optional string    path_param = 1;
	optional string   query_param = 2;
	optional string  header_param = 3;
	optional string  matrix_param = 4;
	optional string  cookie_param = 5;
	optional string    form_param = 6;
	
	optional bool mapping_content = 10;
	
	optional string      consumer = 20;
	optional string      producer = 21;
	optional string  entity_field = 22;
	
	optional string  text_pattern = 30;
	
	optional string    xml_header = 40;
	optional string      xml_root = 41;
	
	optional string     raw_field = 60;
}

message CraftMethodOptions {
	optional string method = 1;
	optional string   path = 2;
	
	optional string headers = 10;
	
	optional string default_consumer = 20;
	optional string default_producer = 21;
	
	optional int32 timeout = 80;
}

message CraftServiceOptions {
	optional string   path = 1;
	
	optional string default_consumer = 20;
	optional string default_producer = 21;
}

extend google.protobuf.FieldOptions {
    optional CraftFieldOptions craft_options = 60100;
}

extend google.protobuf.EnumOptions {
	optional CraftEnumOptions craft_enum_options = 60100;
}

extend google.protobuf.MessageOptions {
    optional CraftMessageOptions craft_message_options = 60100;
}

extend google.protobuf.MethodOptions {
    optional CraftMethodOptions craft_method_options = 60100;
}

extend google.protobuf.ServiceOptions {
    optional CraftServiceOptions craft_service_options = 60100;
}
